# tauri-plugin-mqtt

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.changes/: config.json  initial-release.md  readme.md
examples/svelte-app/: package.json
examples/svelte-app/src/: App.svelte
examples/svelte-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/svelte-app/src-tauri/src/: main.rs
src/: lib.rs
webview-dist/: index.d.ts  index.min.js  index.mjs
webview-src/: index.ts
